samples/_failures_safe/1761793771_d4176d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ffcd4d3.c: In function ‘main’:
./samples/SAFE/__tmp_6ffcd4d3.c:157:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  157 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_6ffcd4d3.c:157:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6ffcd4d3.c:157:9: error: expected ‘;’ at end of input
  157 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_6ffcd4d3.c:157:5: error: expected declaration or statement at end of input
  157 |     size
      |     ^~~~
